--- a/Portfolio/portfolio/src/app/main-page/main-page.component.html
+++ b/Portfolio/portfolio/src/app/main-page/main-page.component.html
@@ -26,6 +26,18 @@
 						In dit leerplan staat de planning en de doelen die ik dit semester wil bereiken.
 					</div>
 				</div>
+            </a>
+            
+            <a routerLink="/secureportfolio" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/cybersecurity.png" alt="security_Engineering">
+					<div class="project_title">
+						Security Engineering
+					</div>
+					<div class="project_description">
+						Hier ga je naar een pagina waar alle informatie en onderzoeken staan die te maken heeft met Cyber Engineering.
+					</div>
+				</div>
 			</a>
 			
 			
