Added analyse_applicatie + document.css
analyse toegevoegd, moet nog verschoond worden maar verder goed

--- a/Portfolio/portfolio/src/app/main-page/main-page.component.html
+++ b/Portfolio/portfolio/src/app/main-page/main-page.component.html
@@ -39,6 +39,18 @@
 					</div>
 				</div>
 			</a>
+
+			<a routerLink="/secureportfolio" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/cybersecurity.png" alt="security_Engineering">
+					<div class="project_title">
+						COVID19 Project
+					</div>
+					<div class="project_description">
+						Hier ga je naar een pagina waar alle informatie en onderzoeken staan die te maken heeft met Cyber Engineering.
+					</div>
+				</div>
+			</a>
 			
 			
 			
