--- a/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
+++ b/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
@@ -24,6 +24,30 @@
 						In dit workshop staat de SDL en NSIT uitgelegd.
 					</div>
 				</div>
+			</a>
+			
+			<a routerLink="/analyse" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Applicatie analyse
+					</div>
+					<div class="project_description">
+						Dit document staan de security requirements, architectuur en user groups
+					</div>
+				</div>
+			</a>
+			
+			<a routerLink="/seworkshop" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Authenticatie Onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek richting authenticatie
+					</div>
+				</div>
             </a>
         
 			
