--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/security-principles/security-principles.component.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/security-principles/security-principles.component.css
@@ -29,10 +29,10 @@
 .content h2 {
     margin: 12.0pt 0 0;
     line-height: 107%;
-    font-size: 1.5em;
+    font-size: 1em;
     font-family: K2D, Halvetica, Arial, sans-serif;
-    color: #555D50;
-    font-weight: 500;
+    color: #b3b3b3;
+    font-weight: 300;
 
 }
 
