--- a/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
+++ b/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
@@ -60,6 +60,41 @@
 						Onderzoek over Logging met uitleg en voorbeelden
 					</div>
 				</div>
+			</a>
+			
+			<a routerLink="/principles" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						standard security principles onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek over security principles met uitleg en voorbeelden
+					</div>
+				</div>
+			</a>
+			<a routerLink="/fuzzy" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						fuzzy testing onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek over fuzzy testing
+					</div>
+				</div>
+			</a>
+			
+			<a routerLink="/jobs" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Security banen
+					</div>
+					<div class="project_description">
+						Een paar voorbeelden van security banen
+					</div>
+				</div>
             </a>
         
 			
