Added new documents to the repository
added
- All group projects
- redvsBlue
-

--- a/Portfolio/portfolio/src/app/main-page/main-page.component.html
+++ b/Portfolio/portfolio/src/app/main-page/main-page.component.html
@@ -40,7 +40,7 @@
 				</div>
 			</a>
 
-			<a routerLink="/secureportfolio" routerLinkActive="active">
+			<a routerLink="/groupportfolio" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/cybersecurity.png" alt="security_Engineering">
 					<div class="project_title">
