--- a/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
+++ b/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
@@ -95,7 +95,22 @@
 						Een paar voorbeelden van security banen
 					</div>
 				</div>
-            </a>
+			</a>
+
+			<a routerLink="/redblue1" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						red vs blue evenement 1
+					</div>
+					<div class="project_description">
+						conclusie van het evenement
+					</div>
+				</div>
+			</a>
+			
+			
+			
         
 			
 			
