--- a/Portfolio/portfolio/src/app/leerplanresearch/leerplanresearch.component.html
+++ b/Portfolio/portfolio/src/app/leerplanresearch/leerplanresearch.component.html
@@ -5,7 +5,7 @@
 			<div class="header__inner">
 				
 				<h1 class="header__title">
-					Security Portfolio
+					Leerplan documenten
 				</h1>
 			</div>
 		</header>
@@ -14,45 +14,41 @@
        
 		<div class="projects">
 		
-			
-			<a routerLink="/groupanalyse" routerLinkActive="active">
+            <a routerLink="/leerplanning" routerLinkActive="active">
 				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<img class="project_icon" src="./assets/img/plan.png" alt="leerplan">
 					<div class="project_title">
-						Group analyse
+						leerplan
 					</div>
 					<div class="project_description">
-						Hierin staan alle analyse documenten
+						In dit leerplan staat de planning en de doelen die ik dit semester wil bereiken.
 					</div>
 				</div>
             </a>
+            
+			<a routerLink="/jobs" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Security banen
+					</div>
+					<div class="project_description">
+						Een paar voorbeelden van security banen en interesses
+					</div>
+				</div>
+			</a>
 
-            <a routerLink="/groupresearch" routerLinkActive="active">
+            <a routerLink="/ontwikkeling1" routerLinkActive="active">
 				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<img class="project_icon" src="./assets/img/plan.png" alt="leerplan">
 					<div class="project_title">
-						Group research
+						Persoonlijke ontwikkeling 
 					</div>
 					<div class="project_description">
-						Hierin staan alle research documenten
+						Persoonlijke ontwikkeling van 10-11-2020
 					</div>
 				</div>
             </a>
-
-            <a routerLink="/jobs" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Group research
-					</div>
-					<div class="project_description">
-						Hierin staan alle vindingen van security aspects over de stage leerlingen.
-					</div>
-				</div>
-            </a>
-        
-			
-			
 			
 		</div>
 		
