--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -14,45 +14,30 @@
        
 		<div class="projects">
 		
-			
-			<a routerLink="/groupanalyse" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Group analyse
-					</div>
-					<div class="project_description">
-						Hierin staan alle analyse documenten
-					</div>
-				</div>
-            </a>
 
-            <a routerLink="/groupresearch" routerLinkActive="active">
+			<a routerLink="/analyse" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Group research
+						Applicatie analyse
 					</div>
 					<div class="project_description">
-						Hierin staan alle research documenten
+						Dit document staan de security requirements, architectuur en user groups
 					</div>
 				</div>
-            </a>
-
-            <a routerLink="/jobs" routerLinkActive="active">
+			</a>
+	
+			<a routerLink="/redblue1" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Group research
+						red vs blue evenement 1
 					</div>
 					<div class="project_description">
-						Hierin staan alle vindingen van security aspects over de stage leerlingen.
+						conclusie van het evenement
 					</div>
 				</div>
-            </a>
-        
-			
-			
+			</a>
 			
 		</div>
 		
