--- a/Portfolio/portfolio/src/app/personalresearch/personalresearch.component.html
+++ b/Portfolio/portfolio/src/app/personalresearch/personalresearch.component.html
@@ -13,46 +13,54 @@
         <div class="project-info">
        
 		<div class="projects">
+					
+			<a routerLink="/xss" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Xss Onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek richting XSS
+					</div>
+				</div>
+			</a>
+			
+			<a routerLink="/logging" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Logging onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek over Logging met uitleg en voorbeelden
+					</div>
+				</div>
+			</a>
+			
+			<a routerLink="/principles" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						standard security principles onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek over security principles met uitleg en voorbeelden
+					</div>
+				</div>
+			</a>
+			<a routerLink="/fuzzy" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						fuzzy testing onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek over fuzzy testing
+					</div>
+				</div>
+			</a>
 		
-			
-			<a routerLink="/groupanalyse" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Group analyse
-					</div>
-					<div class="project_description">
-						Hierin staan alle analyse documenten
-					</div>
-				</div>
-            </a>
-
-            <a routerLink="/groupresearch" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Group research
-					</div>
-					<div class="project_description">
-						Hierin staan alle research documenten
-					</div>
-				</div>
-            </a>
-
-            <a routerLink="/jobs" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Group research
-					</div>
-					<div class="project_description">
-						Hierin staan alle vindingen van security aspects over de stage leerlingen.
-					</div>
-				</div>
-            </a>
-        
-			
-			
 			
 		</div>
 		
