--- a/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
+++ b/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
@@ -14,105 +14,41 @@
        
 		<div class="projects">
 		
-			<a routerLink="/seworkshop" routerLinkActive="active">
+			<a routerLink="/personalresearch" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Workshop Security engineering pt1.
+						Persoonlijk Onderzoek met conclusie
 					</div>
 					<div class="project_description">
-						In dit workshop staat de SDL en NSIT uitgelegd.
+						Hierin staat al het onderzoek met conclusie hoe ik het zal implimenteren
 					</div>
 				</div>
 			</a>
 			
-			<a routerLink="/analyse" routerLinkActive="active">
+			<a routerLink="/personalanalyse" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Applicatie analyse
+						Persoonlijke analyse
 					</div>
 					<div class="project_description">
-						Dit document staan de security requirements, architectuur en user groups
+						Hierin staat de analyse + implimentaties met uitleg.
 					</div>
 				</div>
 			</a>
 			
-			<a routerLink="/xss" routerLinkActive="active">
+			<a routerLink="/personalleerplanning" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Xss Onderzoek
+						Persoonlijke ontwikkeling Leerplan
 					</div>
 					<div class="project_description">
-						Onderzoek richting XSS
+						Staat het leerplan + persoonlijke ontwikkelingen
 					</div>
 				</div>
 			</a>
-			
-			<a routerLink="/logging" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Logging onderzoek
-					</div>
-					<div class="project_description">
-						Onderzoek over Logging met uitleg en voorbeelden
-					</div>
-				</div>
-			</a>
-			
-			<a routerLink="/principles" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						standard security principles onderzoek
-					</div>
-					<div class="project_description">
-						Onderzoek over security principles met uitleg en voorbeelden
-					</div>
-				</div>
-			</a>
-			<a routerLink="/fuzzy" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						fuzzy testing onderzoek
-					</div>
-					<div class="project_description">
-						Onderzoek over fuzzy testing
-					</div>
-				</div>
-			</a>
-			
-			<a routerLink="/jobs" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Security banen
-					</div>
-					<div class="project_description">
-						Een paar voorbeelden van security banen
-					</div>
-				</div>
-			</a>
-
-			<a routerLink="/redblue1" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						red vs blue evenement 1
-					</div>
-					<div class="project_description">
-						conclusie van het evenement
-					</div>
-				</div>
-			</a>
-			
-			
-			
-        
-			
 			
 			
 		</div>
