--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/applicatie-analyse.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/applicatie-analyse.component.html
@@ -295,4 +295,16 @@
 
 </table>
 
+<p>Confidentiality</p>
+  <p>Niet alle data is confidential. Het is mogelijk om verhalen van andere mensen te kunnen bekijken. Account informatie (in dit geval email en status of het een administrator is) is wel confidential en zal je alleen kunnen zien als je daartoe authorizatie hebt. Dit is om ervoor te zorgen dat aanvallers meer moeite moeten doen. </p>
+   
+    <p>Integrity</p>
+   <p> Gebruiker informatie is belangrijk maar het aanpassen van van verhalen mag nooit worden gedaan door iemand anders behalve een administrator of de schrijver zelfs. Als dit geen garantie is zullen gebruikers nooit hun verhalen op deze website willen zetten. Dit kan daarnaast dan ook nog leiden tot slander of het toevoegen van informatie wat volgens de regels van de website niet mag. </p> 
+  
+   <p>Availability</p> 
+<p>In geval van nood moeten gebruikers/schrijvers altijd hun verhaal of profiel moeten kunnen aanpassen of verwijderen. Als dit niet garant staat kan het zijn dat schrijvers de site niet meer zullen vertrouwen. Het bekijken van verhalen alhoewel wel belangrijks is minder belangrijk dan het aanpassen van het account of verhaal. </p>  
+   
+    <p>Privacy</p>
+    <p>Niet alle data is persoonlijke data maar een gedeelte ervan wel. Dit houdt in dat alle persoonlijke data alleen maag worden opgeslagen als dat het absoluut nodig is en dat het daarnaast volgend de GDPR wet moet worden voldaan  </p>
+
 </div>
