--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -26,6 +26,18 @@
 					</div>
 				</div>
 			</a>
+
+			<a routerLink="/analyse" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Technology impact assessment
+					</div>
+					<div class="project_description">
+						De TIA is vooral handig voor ontwikkelaars en ontwerpers te laten begrijpen welke vooroordelen ze in een systeem inbouwen. Aangezien mijn project alleen basis functies zal hebben denk ik niet dat ik veel gebruik van de TIA.
+					</div>
+				</div>
+			</a>
 	
 			<a routerLink="/redblue1" routerLinkActive="active">
 				<div class="project float">
