--- a/Portfolio/portfolio/src/app/project_components/project_analyse/project-analyse-documents/project-analyse-documents.component.html
+++ b/Portfolio/portfolio/src/app/project_components/project_analyse/project-analyse-documents/project-analyse-documents.component.html
@@ -16,7 +16,7 @@
 		<div class="projects">
 		
 			
-			<a href="/groupbedreiginganalyse" routerLinkActive="active">
+			<a href="https://docs.google.com/document/d/1yk5n4Yj9kjR-9-WKnhYO98QI7yxeWz-bLtfJAzsk4wk/edit?usp=sharing" >
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
@@ -26,9 +26,34 @@
 						Threat analyse + misuse cases
 					</div>
 				</div>
+			</a>
+			
+			<a href="https://drive.google.com/file/d/1oalihaF7c6Sdk0cyzg4aPOqhIIzmgY0U/view?usp=sharing" >
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Risk analyse
+					</div>
+					<div class="project_description">
+						Risk analyse
+					</div>
+				</div>
+			</a>
+			
+			<a href="https://docs.google.com/document/d/1tK9mPm-yMdA8LeUEKCMsiGZQxzDJi50g42zH_l0dfII/edit?usp=sharing" >
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						DPIA
+					</div>
+					<div class="project_description">
+						Data Privacy Impact Assesment
+					</div>
+				</div>
             </a>
 
-            <a href="/ethischeanalyse" routerLinkActive="active">
+
+            <a href="https://docs.google.com/document/d/1--_mFkktQ-q5VhOhaNy1_9H52aZbSxOtgiPS39__9vY/edit?usp=sharing" >
 				<div class="project float">
 					<img class="project_icon"  src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
