--- a/Portfolio/portfolio/src/app/project_components/project_research/project-research-documents/project-research-documents.component.html
+++ b/Portfolio/portfolio/src/app/project_components/project_research/project-research-documents/project-research-documents.component.html
@@ -16,7 +16,19 @@
 		<div class="projects">
 		
 			
-			<a href="/bsnresearch" routerLinkActive="active">
+			<a href="https://docs.google.com/document/d/1t9f5cSS--y_WvgxXQeprG2W3b-Re9NmHNk6nNllZfIw/edit?usp=sharing" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Research Plan
+					</div>
+					<div class="project_description">
+						Het research plan
+					</div>
+				</div>
+			</a>
+			
+			<a href="https://docs.google.com/document/d/1NIJLnFEU-JE9G23hAS3NURpAmecvvrk3YZ7vw4sF-3k/edit?usp=sharing" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
@@ -26,7 +38,21 @@
 						Onderzoek of de bsn mag worden opgeslagen.
 					</div>
 				</div>
+			</a>
+			<a href="https://docs.google.com/document/d/1vW0xZwIpekxgk9s8n-XwXrK-2mied9QujRa56Ozhfug/edit?usp=sharing" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						MySQL research
+					</div>
+					<div class="project_description">
+						Onderzoek naar de beveiliging van mysql in Azure an AWS
+					</div>
+				</div>
             </a>
+
+
+
 
     
     		
