--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -27,7 +27,7 @@
 				</div>
 			</a>
 
-			<a routerLink="https://drive.google.com/file/d/1oalihaF7c6Sdk0cyzg4aPOqhIIzmgY0U/view?usp=sharing" routerLinkActive="active">
+			<a href="https://drive.google.com/file/d/1oalihaF7c6Sdk0cyzg4aPOqhIIzmgY0U/view?usp=sharing" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
