--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -62,6 +62,18 @@
 					</div>
 				</div>
 			</a>
+
+			<a href="https://docs.google.com/document/d/12UQwkwI56M_09LspXOwPEOn5EeKgs0EfxjsmgTXeKVA/edit?usp=sharing" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Logging implementatie
+					</div>
+					<div class="project_description">
+						Code implementatie van Logging. 
+					</div>
+				</div>
+			</a>
 			
 		</div>
 		
