--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -74,6 +74,18 @@
 					</div>
 				</div>
 			</a>
+
+			<a routerLink="/authorisatie" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Authorisatie implementatie
+					</div>
+					<div class="project_description">
+						Code implementatie van Authenticatie/Authorisatie. 
+					</div>
+				</div>
+			</a>
 			
 		</div>
 		
