--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -86,6 +86,18 @@
 					</div>
 				</div>
 			</a>
+
+			<a routerLink="/rsa" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						RSA Calculatie
+					</div>
+					<div class="project_description">
+						Calculatie van RSA.
+					</div>
+				</div>
+			</a>
 			
 		</div>
 		
