--- a/Portfolio/portfolio/src/app/analyse_security_engineer/rsa/rsa.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/rsa/rsa.component.html
@@ -1,5 +1,6 @@
 <div class="content">
 <h2>RSA Encryptie / Decryptie Calculatie</h2>
+<p>In dit hoofdstuk zal ik een calculatie uitvoeren om de RSA te encrypten en berekenen.</p>
 <p><b>Hoofdstuk 1, creating public and private key </b> </p>
 <p>p en q moeten priemgetallen zijn. In dit geval ga ik p = 23 en q = 17 gebruiken.</p>
 <p>
