--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -15,19 +15,8 @@
 		<div class="projects">
 		
 
-			<a routerLink="/analyse" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Applicatie analyse
-					</div>
-					<div class="project_description">
-						Dit document staan de security requirements, architectuur en user groups
-					</div>
-				</div>
-			</a>
-
-			<a href="https://drive.google.com/file/d/1oalihaF7c6Sdk0cyzg4aPOqhIIzmgY0U/view?usp=sharing" routerLinkActive="active">
+		
+			<!-- <a href="https://drive.google.com/file/d/1oalihaF7c6Sdk0cyzg4aPOqhIIzmgY0U/view?usp=sharing" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
@@ -37,9 +26,9 @@
 						Dit linkt naar mijn risk analyse
 					</div>
 				</div>
-			</a>
+			</a> -->
 
-			<a routerLink="" routerLinkActive="active">
+			<!-- <a routerLink="" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
@@ -49,21 +38,11 @@
 						De TIA is vooral handig voor ontwikkelaars en ontwerpers te laten begrijpen welke vooroordelen ze in een systeem inbouwen. Aangezien mijn project alleen basis functies zal hebben denk ik niet dat ik veel gebruik van de TIA.
 					</div>
 				</div>
-			</a>
+			</a> -->
 	
-			<a routerLink="/redblue1" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						red vs blue evenement 1
-					</div>
-					<div class="project_description">
-						conclusie van het evenement
-					</div>
-				</div>
-			</a>
 
-			<a href="https://docs.google.com/document/d/12UQwkwI56M_09LspXOwPEOn5EeKgs0EfxjsmgTXeKVA/edit?usp=sharing" routerLinkActive="active">
+		
+			<!-- <a href="https://docs.google.com/document/d/12UQwkwI56M_09LspXOwPEOn5EeKgs0EfxjsmgTXeKVA/edit?usp=sharing" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
@@ -73,19 +52,34 @@
 						Code implementatie van Logging. 
 					</div>
 				</div>
-			</a>
+			</a> -->
 
-			<a routerLink="/authorisatie" routerLinkActive="active">
+		
+
+  
+			<a routerLink="/jobs" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Authorisatie implementatie
+						Security banen
 					</div>
 					<div class="project_description">
-						Code implementatie van Authenticatie/Authorisatie. 
+						Een paar voorbeelden van security banen en interesses
 					</div>
 				</div>
 			</a>
+
+            <a routerLink="/ontwikkeling1" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="leerplan">
+					<div class="project_title">
+						Persoonlijke ontwikkeling 
+					</div>
+					<div class="project_description">
+						Persoonlijke ontwikkeling van 10-11-2020
+					</div>
+				</div>
+            </a>
 
 			<a routerLink="/rsa" routerLinkActive="active">
 				<div class="project float">
