--- a/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
+++ b/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
@@ -13,12 +13,57 @@
         <div class="project-info">
        
 		<div class="projects">
-		
+
+			<a routerLink="/leerplanning" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="leerplan">
+					<div class="project_title">
+						leerplan
+					</div>
+					<div class="project_description">
+						In dit leerplan staat de planning en de doelen die ik dit semester wil bereiken.
+					</div>
+				</div>
+            </a>
+			<a routerLink="/analyse" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Applicatie analyse
+					</div>
+					<div class="project_description">
+						Dit document staan de security requirements, architectuur en user groups
+					</div>
+				</div>
+			</a>
+			<a routerLink="/implementatie" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+					 implementaties
+					</div>
+					<div class="project_description">
+						Alle beveiligingsimplementaties.
+					</div>
+				</div>
+			</a>
+			<a routerLink="/redblue1" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						red vs blue evenement 1
+					</div>
+					<div class="project_description">
+						conclusie van het evenement
+					</div>
+				</div>
+			</a>
+
 			<a routerLink="/personalresearch" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Persoonlijk Onderzoek met conclusie
+						Onderzoek
 					</div>
 					<div class="project_description">
 						Hierin staat al het onderzoek met conclusie hoe ik het zal implimenteren
@@ -30,27 +75,14 @@
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Persoonlijke analyse
+						Opdrachten
 					</div>
 					<div class="project_description">
-						Hierin staat de analyse + implimentaties met uitleg.
+						Hierin staan alle opdrachten.
 					</div>
 				</div>
 			</a>
-			
-			<a routerLink="/personalleerplanning" routerLinkActive="active">
-				<div class="project float">
-					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
-					<div class="project_title">
-						Persoonlijke ontwikkeling Leerplan
-					</div>
-					<div class="project_description">
-						Staat het leerplan + persoonlijke ontwikkelingen
-					</div>
-				</div>
-			</a>
-			
-			
+						
 		</div>
 		
     </div>
