--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/document.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/document.css
@@ -1,4 +1,4 @@
-.content {
+.content p {
 }
 
 .content table {
@@ -24,6 +24,15 @@
     color: #b3b3b3;
     font-weight: 300;
 
+}
+
+.content p {
+    margin: 12.0pt 0 0;
+    line-height: 107%;
+    font-size: 1em;
+    font-family: K2D, Halvetica, Arial, sans-serif;
+   
+    
 }
 
 @media screen and (max-width:789px) {
