--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
@@ -25,6 +25,14 @@
     font-weight: 300;
 
 }
+.content p {
+    margin: 12.0pt 0 0;
+    line-height: 107%;
+    font-size: 1em;
+    font-family: K2D, Halvetica, Arial, sans-serif;
+   
+    
+}
 
 .content h2 {
     margin: 12.0pt 0 0;
