--- a/Portfolio/portfolio/src/app/document.css
+++ b/Portfolio/portfolio/src/app/document.css
@@ -1,6 +1,14 @@
 .content {
 }
 
+.content p {
+    margin: 12.0pt 0 0;
+    line-height: 107%;
+    font-size: 1em;
+    font-family: K2D, Halvetica, Arial, sans-serif;
+   
+    
+}
 .content table {
     width: 100%;
     margin: 30px 0;
